--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -16,5 +17,9 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2"
+  },
+  "lint-staged": {
+    "*.ts": ["prettier --write", "eslint --fix"],
+    "*.html": ["prettier --write"]
   }
 }
