--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "vite": "^7.2.2"
   },
   "lint-staged": {
-    "*.ts": ["prettier --write", "eslint --fix"],
-    "*.html": ["prettier --write"]
+    "*.ts": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.html": [
+      "prettier --write"
+    ]
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "tailwindcss": "^4.1.17"
   }
 }
