--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/luxon": "^3.7.1",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
@@ -28,8 +31,10 @@
     ]
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "dotenv": "^17.2.3",
+    "luxon": "^3.7.2",
     "tailwindcss": "^4.1.17"
   }
 }
