--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_APP_NAME="Auction Web"
 VITE_BASE_URL="http://localhost:5174"
 VITE_API_URL="https://v2.api.noroff.dev"
+TEST_USER_EMAIL="workflowuser@stud.noroff.no"
+TEST_USER_PASSWORD="workflowpass"
