--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.57.0",
     "@types/luxon": "^3.7.1",
+    "@types/node": "^24.10.1",
     "autoprefixer": "^10.4.22",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
@@ -33,7 +36,6 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
-    "dotenv": "^17.2.3",
     "luxon": "^3.7.2",
     "tailwindcss": "^4.1.17"
   }
