--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.57.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.1",
+    "@types/socket.io": "^3.0.1",
     "autoprefixer": "^10.4.22",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2"
@@ -36,7 +40,11 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "luxon": "^3.7.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.17"
   }
 }
