--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_APP_NAME="Auction Web"
-VITE_BASE_URL="http://localhost:5173"
+VITE_BASE_URL="https://your-site.netlify.app"
 VITE_API_URL="https://v2.api.noroff.dev"
+VITE_SOCKET_URL="https://YOUR-RENDER-APP.onrender.com"
 TEST_USER_EMAIL="workflowuser@stud.noroff.no"
 TEST_USER_PASSWORD="workflowpass"
