--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "dev:server": "nodemon server/livebids.ts",
+
+    "build:server": "tsc -p tsconfig.server.json",
+    "build:client": "vite build",
+    "build": "npm run build:server && npm run build:client",
+
     "preview": "vite preview",
+
+    "start": "node dist-server/livebids.js",
+
     "prepare": "husky install"
   },
   "devDependencies": {
