--- a/package.json
+++ b/package.json
@@ -6,15 +6,11 @@
   "scripts": {
     "dev": "vite",
     "dev:server": "nodemon server/livebids.ts",
-
     "build:server": "tsc -p tsconfig.server.json",
     "build:client": "vite build",
     "build": "npm run build:server && npm run build:client",
-
     "preview": "vite preview",
-
     "start": "node dist-server/livebids.js",
-
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -29,6 +25,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tsx": "^4.21.0",
