--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "CommonJS",
     "moduleResolution": "node",
-
     "outDir": "dist-server",
     "rootDir": "server",
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-
     "types": ["node"],
     "lib": ["ES2022"]
   },
