update: env variables

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_APP_NAME="Auction Web"
-VITE_BASE_URL="https://web-auction.netlify.app"
+VITE_BASE_URL="https://web-auction.netlify.app" 
 VITE_API_URL="https://v2.api.noroff.dev"
-VITE_SOCKET_URL="https://auction-web.onrender.com"
+VITE_SOCKET_URL="https://auction-web-3fvm.onrender.com"
 TEST_USER_EMAIL="workflowuser@stud.noroff.no"
 TEST_USER_PASSWORD="workflowpass"
