--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,12 @@
-name: Deploy to GitHub Pages
+name: Run Unit and E2E Tests
 
 on:
-  push:
+  pull_request:
     branches: [main]
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
+  run-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,18 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      
+      - name: Run Unit Tests
+        run: npm run test:unit
 
-      - name: Build frontend
-        run: npm run build:client
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./dist
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Run E2E Tests
+        run: npm run test:e2e
