--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "npm run build:server && npm run build:client",
     "preview": "vite preview",
     "start": "node dist-server/liveBidServer.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:unit": "vitest",
+    "test:e2e": "npx playwright test",
+    "test": "npm run test:unit && npm run test:e2e"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -21,11 +24,13 @@
     "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.1",
     "@types/socket.io": "^3.0.1",
+    "@vitest/browser": "^4.0.15",
     "autoprefixer": "^10.4.22",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
+    "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tsx": "^4.21.0",
